Remove redundant PatchContext constructor
Remove the constructor that only converts from List to ImmutableList.

JIRA: NETCONF-1438
Change-Id: I3b64975573cb100524e3a6b778a9841aa621e839
Signed-off-by: Peter Suna <peter.suna@pantheon.tech>